cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedCpp11IdentifierTest/bug222553.cpp
int bug222553_main(int argc, char** argv)
{
    auto const a = 0;
    a++; 

    return 0;
}